@@ -89,6 +89,8 @@ class OpbParser
 
       assert( parser.nnz >= 0 );
 
+      assert(parser.coeffobj.size() == parser.nCols);
+
       Vec<REAL> obj_vec( size_t( parser.nCols ), REAL{ 0.0 } );
 
       for( auto i : parser.coeffobj )
@@ -106,6 +108,10 @@ class OpbParser
       problem.setVariableNames( std::move( parser.colnames ) );
       problem.setName( std::move( filename ) );
       problem.setConstraintNames( std::move( parser.rownames ) );
+
+      problem.set_problem_type( ProblemFlag::kMixedInteger );
+      problem.set_problem_type( ProblemFlag::kInteger );
+      problem.set_problem_type( ProblemFlag::kBinary );
 
       problem.setInputTolerance(
           REAL{ pow( typename RealParseType<REAL>::type{ 10 },
