@@ -20,10 +20,11 @@ Fixed bugs
 
 Miscellaneous
 -------------
-- RoundingSat https://gitlab.com/MIAOresearch/software/roundingsat is available as PseudoBoolean solver
+- RoundingSat https://gitlab.com/MIAOresearch/software/roundingsat is available as PseudoBoolean solver (experimental)
 - Ortools: PaPILO parses the dual solution and the reduced costs from ortools
 - HiGHS: PaPILO supports HiGHS version 1.3+
 - OPB-Format: PaPILO can now parse files in linear opb format
+- if PaPILO solve the problem a backend solver is no longer called
 
 @section RN212 PaPILO 2.1.3
 ***************************
